welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: Missing closing brace `}' assumed here
def versLAvant(nbPas:Int, versLAvant: Boolean){
^